# automaton-launchpad

./: .gitignore  Cargo.toml  README.md  icp.yaml  package-lock.json  package.json  prompt.md  tasks.md  tsconfig.base.json
.github/workflows/: ci.yml  deploy-hard-reset.yml  deploy-soft.yml  publish-playground-images.yml
apps/indexer/: Dockerfile  package.json  tsconfig.build.json  tsconfig.json
apps/rpc-gateway/: Dockerfile  package.json  tsconfig.build.json  tsconfig.json
apps/web/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
backend/factory/: Cargo.toml  STORAGE.md  factory.did
backend/factory/src/: base_rpc.rs  controllers.rs  cycles.rs  escrow.rs  evm.rs  expiry.rs  init.rs  lib.rs  retry.rs  scheduler.rs  session_transitions.rs  spawn.rs  state.rs  types.rs
backend/factory/src/api/: admin.rs  public.rs
evm/: foundry.toml
evm/src/: LocalEscrow.sol  MockUSDC.sol
evm/test/: LocalEscrow.t.sol
mocks/: mock-9.html
ralph/: milestones.json  state.json
scripts/: deploy-automaton-inbox.mjs  deploy-local-escrow.mjs  deploy-local-escrow.sh  deploy-playground-release.sh  dev.sh  playground-bootstrap.sh  playground-reset.sh  playground-smoke.mjs  playground-smoke.sh  ralph-loop.sh  render-factory-local-init-args.mjs  seed-local-wallet.mjs  smoke-local-escrow.mjs  smoke-local-escrow.sh  start-local-evm.sh  upload-factory-artifact.mjs  with-repo-node.sh  write-playground-status.mjs
specs/: CHECKLIST-CLOUD-PLAYGROUND.md  DESIGN-CLOUD-PLAYGROUND.md  DESIGN-SPAWN-INTEGRATION.md  SPEC-FACTORY.md  SPEC-INDEXER.md  SPEC.md
(+194 files in other folders)
