[package]
name = "factory"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.24"
ic-cdk = "0.19.0"
ic-stable-structures = "0.7.0"
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10.9", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
